--- a/index.html
+++ b/index.html
@@ -19,9 +19,23 @@
             <h1 class="poke">Pokemon</h1>
         </div>
 
-    </header>
+    </header> <!--header the and-->
 
-    <main>main</main>
+    <main class="manin-container">
+        <h1>CHARIZARD</h1>
+
+        <H2>CHARIZARD</H2>
+
+        <img src="assents/img/evoluão3.png" alt="charizard">
+
+        <h3>Let´s Go, CHARIZARD ! </h3>
+
+        <p class="text">Ele cospe fogo que é quente o suficiente para derreter pedras.  Pode causar incêndios florestais soprando
+            chamas.</p>
+
+            <button class="down">Download</button>
+
+    </main>
 
     <footer>footer</footer>
 
