--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 
     </main>
 
-    <footer>footer</footer>
+    <footer><span>Copyright 2023 &copy; | Francisco da Silva
+    </span>
+</footer>
 
 </body>
 
