--- a/index.html
+++ b/index.html
@@ -30,16 +30,17 @@
 
         <h3>Let´s Go, CHARIZARD ! </h3>
 
-        <p class="text">Ele cospe fogo que é quente o suficiente para derreter pedras.  Pode causar incêndios florestais soprando
+        <p class="text">Ele cospe fogo que é quente o suficiente para derreter pedras. Pode causar incêndios florestais
+            soprando
             chamas.</p>
 
-            <button class="down">Download</button>
+        <button class="down">Download</button>
 
-    </main>
+    </main><!--main the end-->
 
-    <footer><span>Copyright 2023 &copy; | Francisco da Silva
-    </span>
-</footer>
+    <footer>
+        <span>Copyright 2023 &copy; | Francisco da Silva
+        </span>
 
 </body>
 
